<resources>
    <string name="app_name">BosatElsaba</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="location_icon">Location Icon\n</string>
    <string name="refresh_data">Refresh Data\n</string>
    <string name="toggle_forecast">toogle forecast\n</string>
    <string name="temperature_format">%.1f°C</string>
    <string name="loading">Loading\n</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bosat Elsaba</string>
    <string name="nav_header_subtitle">Search for the Perfict Day</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="weather_icon_desc">Weather ICON\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_action_desc">settings action desc</string>
    <string name="nav_header_profile_desc">nav_header_profile_desc\n</string>
    <string name="nav_header_status_desc">nav_header_status_desc\n</string>
    <string name="nav_header_title_desc">nav_header_title_desc</string>
    <string name="nav_header_subtitle_desc">nav_header_subtitle_desc</string>
    <string name="nav_header_action">nav_header_action\n</string>
    <string name="nav_header_action_desc">nav_header_action_desc</string>
    <string name="menu_Favorite">Favorite\n</string>
    <string name="menu_setting">Setting\n</string>
    <string name="perfect_day_for_a_walk">Perfect day for a walk!</string>
    <string name="humidity_icon">Humidity Icon</string>
    <string name="wind_icon">Wind Icon</string>
    <string name="pressure_icon">Pressure Icon</string>
    <string name="cloudiness_icon">Cloudiness Icon</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="_5_day_forecast">5-Day Forecast</string>
    <string name="sunrise_icon">Sunrise Icon</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset_icon">Sunset Icon</string>
    <string name="sunset">Sunset</string>
    <string name="favorite">Favorite</string>
    <string name="your_favorite_cities">Your Favorite Cities</string>
    <string name="location_settings">Location Settings</string>
    <string name="use_gps_location">Use GPS Location</string>
    <string name="choose_from_map">Choose from Map</string>
    <string name="units_icon">Units Icon</string>
    <string name="units">Units</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="pressure_unit">Pressure Unit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="elevation_units">Elevation Units</string>
    <string name="visibility_units">Visibility Units</string>
    <string name="language_icon">Language Icon</string>
    <string name="language">Language</string>
    <string name="app_language">App Language</string>
    <string name="save_settings">Save Settings</string>
    <string name="toggle_favorite">Toggle Favorite</string>
    <string name="map">Map</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="alarm_service_title">Weather Alarm Service</string>
    <string name="alarm_service_content">Managing your weather alerts</string>
    <string name="pressure">Pressure</string>
    <string name="Feels">Feels</string>
    <string name="weather_alerts">Weather Alerts</string>
    <string name="add_alert">Add Alert\n</string>
    <string name="hours">Hours</string>
    <string name="set_alert_duration">Set Alert Duration\n</string>
    <string name="minutes">Minuts</string>
    <string name="notification">Notification</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="add_alert_title">Set Weather Alert</string>
    <string name="alarm_type">Alert Type</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_Alarm">Alarm</string>
    <string name="confirm">Confirm</string>
    <string name="selected_city">Selected City: %1$s</string>
    <string name="select_city">Select City</string>
    <string name="no_city_selected">Please select a city</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="unknown_city">Unknown City</string>
    <string name="no_weather_data">No weather data</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_icon">visibility</string>
</resources>