<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alert_duration"
        android:textSize="20sp"
        android:textColor="@color/text_primary_day"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textSize="16sp"
            android:textColor="@color/text_primary_day"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <NumberPicker
            android:id="@+id/npHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minWidth="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="16sp"
            android:textColor="@color/text_primary_day"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <NumberPicker
            android:id="@+id/npMinutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minWidth="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selected_date"
            android:textSize="16sp"
            android:textColor="@color/text_primary_day" />

        <Button
            android:id="@+id/btnSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rbNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:checked="true"
            android:textColor="@color/text_primary_day"/>

        <RadioButton
            android:id="@+id/rbAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_sound"
            android:textColor="@color/text_primary_day"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tvSelectedCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selected_city"
            android:textSize="16sp"
            android:textColor="@color/text_primary_day" />

        <Button
            android:id="@+id/btnSelectCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_city" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:text="@string/confirm" />

</LinearLayout>