<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_outline"
            android:title="@string/menu_home"
            app:actionLayout="@layout/nav_menu_item_layout"
            app:iconTint="@color/icon_tint_day"
            style="@style/NavigationMenuItemStyle" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_heart_filled"
            android:title="@string/menu_Favorite"
            app:actionLayout="@layout/nav_menu_item_layout"
            app:iconTint="@color/icon_tint_day"
            style="@style/NavigationMenuItemStyle" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting"
            app:actionLayout="@layout/nav_menu_item_layout"
            app:iconTint="@color/icon_tint_day"
            style="@style/NavigationMenuItemStyle" />

        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_Alarm"
            app:actionLayout="@layout/nav_menu_item_layout"
            app:iconTint="@color/icon_tint_day"
            style="@style/NavigationMenuItemStyle" />
    </group>
</menu>